img stretching fix take 2

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -100,5 +100,11 @@ li {
 }
 
 img {
-  max-width: 100%;
+  max-width: 200%;
 }
+
+.image {
+  width: 170px;
+  height: 300px;
+}
+
